diesel_compile_tests/tests/fail/derive/bad_sqlite_type.stderr
error: unexpected end of input, expected parentheses
 --> $DIR/bad_sqlite_type.rs:6:9
  |
6 | #[diesel(sqlite_type)]
  |         ^^^^^^^^^^^^^

error: expected attribute `name`
  --> $DIR/bad_sqlite_type.rs:10:21
   |
10 | #[diesel(sqlite_type())]
   |                     ^^

error: expected parentheses
  --> $DIR/bad_sqlite_type.rs:14:22
   |
14 | #[diesel(sqlite_type = "foo")]
   |                      ^

error: unexpected end of input, expected `=`
  --> $DIR/bad_sqlite_type.rs:18:21
   |
18 | #[diesel(sqlite_type(name))]
   |                     ^^^^^^

error: expected `=`
  --> $DIR/bad_sqlite_type.rs:22:26
   |
22 | #[diesel(sqlite_type(name()))]
   |                          ^^

error: expected string literal
  --> $DIR/bad_sqlite_type.rs:26:29
   |
26 | #[diesel(sqlite_type(name = Foo))]
   |                             ^^^

error: unknown attribute, expected `name`
  --> $DIR/bad_sqlite_type.rs:30:22
   |
30 | #[diesel(sqlite_type(what))]
   |                      ^^^^
